# pinapharm-ai

./: .gitignore  Makefile  README.md
agent/: .env.example  .gitignore  pyproject.toml
agent/app/: agent.py  config_client.py  graph.py  main.py  planner.py  prompts.py  redaction.py  schemas.py  tools.py  triage.py
agent/app/eval/: __main__.py  harness.py  scenarios.py
agent/tests/: test_agent.py  test_config_client.py  test_eval.py  test_graph.py  test_main.py  test_planner.py  test_redaction.py  test_tools.py  test_triage.py
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-06-13-pharmacist-agent.md  2026-06-14-consultation-personalization.md  (+6 more)
web/: .env.example  package-lock.json  package.json  vitest.config.ts
web/data/: ingredient-knowledge.json
web/prisma/: schema.prisma  seed.ts
web/scripts/: import-mfds.ts  index-knowledge.ts  index-products.ts
web/tests/: agentStream.test.ts  api-products.test.ts  cart-api.test.ts  cart.test.ts  chat.test.ts  chunking.test.ts  commerce-schema.test.ts  commerceErrors.test.ts  consultations.test.ts  customers.test.ts  embeddings.test.ts  health-profile.test.ts  import.test.ts  knowledge-admin-api.test.ts  knowledge.test.ts  knowledgeAdmin.test.ts  orders-api.test.ts  orders.test.ts  payment-orders.test.ts  payments-confirm-api.test.ts  payments-webhook-api.test.ts  payments.test.ts  products-hybrid.test.ts  products-structured.test.ts  products.test.ts  retrieve-knowledge.test.ts  revisions-api.test.ts  revisions.test.ts  rollback.test.ts  skillMatch.test.ts  skills-dryrun.test.ts  vectors.test.ts
(+101 files in other folders)
